[package]
name = "schengen-client"
version = "0.1.0"
edition = "2024"

[dependencies]
schengen = "0.1"
ashpd = "0.12.1"
reis = "0.5.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
hostname = "0.4"
chrono = "0.4"
kbvm = "0.1"
libc = "0.2"
listenfd = "1.0"
